<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ProductCustomerMoreDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="411dp"
            android:layout_height="731dp"
            android:layout_marginEnd="411dp"
            android:layout_marginBottom="731dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/cusProductImage"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:background="#DC000000"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:src="@drawable/blouse"
                    android:contentDescription="@string/product_image_more_details" />

                <LinearLayout
                    android:id="@+id/linearlayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:padding="0dp">

                    <TextView
                        android:id="@+id/cusProductTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:fontFamily="@font/acme"
                        android:padding="10dp"
                        android:text="@string/product_title_mor_details"
                        android:textColor="#000000"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cusProductPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="70dp"
                        android:fontFamily="sans-serif-black"
                        android:padding="10dp"
                        android:text="@string/price"
                        android:textAlignment="center"
                        android:textColor="#EF5350"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearlayout1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="0dp">

                    <TextView
                        android:id="@+id/cusProductDescription"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:fontFamily="sans-serif-light"
                        android:padding="10dp"
                        android:text="@string/product_description"
                        android:textColor="#D3000000"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/cusProductOfferPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="1dp"
                        android:padding="10dp"
                        android:text="@string/offer_price"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearlayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/availableSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="serif"
                        android:padding="10dp"
                        android:text="@string/available_size"
                        android:textColor="#01579B"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cusProductSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:background="#9A000000"
                        android:fontFamily="serif"
                        android:padding="10dp"
                        android:text="@string/product_size"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearlayout3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/availableColor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="serif"
                        android:padding="10dp"
                        android:text="@string/available_color"
                        android:textColor="#01579B"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cusProductColors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:background="#C3000000"
                        android:padding="10dp"
                        android:text="@string/product_color"
                        android:textAlignment="center"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <Button
                    android:id="@+id/Addtocart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/product_textview"
                    android:padding="20dp"
                    android:text="@string/add_to_cart"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>