<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:cardBackgroundColor="#D5D1D1"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:layout_marginTop="4dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp"
        app:cardMaxElevation="1dp"
        app:cardElevation="1dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/productimage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/female_dresses"
                android:contentDescription="@string/product_image" />

            <TextView
                android:id="@+id/productOffer"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="-12dp"
                android:layout_marginTop="-4dp"
                android:background="#FF5252"
                android:padding="5dp"
                android:rotation="320"
                android:text="@string/offer"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="255dp"
                android:layout_marginBottom="5dp"
                android:background="#0091EA"
                android:gravity="center"
                android:text="@string/product_price"
                android:textColor="#FFF"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/productTitle"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="210dp"
                android:layout_marginBottom="5dp"
                android:background="#E040FB"
                android:gravity="center"
                android:text="Pink Frock"
                android:textColor="#FFF"
                android:textSize="15sp" />

            <Button
                android:id="@+id/moreBtn"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_toEndOf="@id/productPrice"
                android:layout_marginStart="1dp"
                android:layout_marginTop="255dp"
                android:layout_marginBottom="15dp"
                android:textColor="#fff"
                android:text="For More..."
                android:background="#535555"
                android:textAlignment="center"
                android:textSize="15sp"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>